dataset1235/2025-2/2318198438/users/867892000/executions/1897677159_2383239197.log
== RUN (2025-08-21 00:59:24)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:06:20)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2  -2*a*b*(radians(c)))**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
95.27
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 2))
          ^^^^^^^^^^^
TypeError: type complex doesn't define __round__ method
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
11.29
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.25
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
50.86
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 2))
          ^^^^^^^^^^^
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 00:50:11)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt((a**2 + b**2) - (2*a*b*radians(cos(c)))) 
print(round(d, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
100.44
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
21.35
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
28.76
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.67
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
55.11
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
12.91
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:05:33)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2  -2*a*b*radians(c))**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
95.27
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 2))
          ^^^^^^^^^^^
TypeError: type complex doesn't define __round__ method
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
11.29
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.25
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
50.86
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 2))
          ^^^^^^^^^^^
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:42:07)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2  -2*a*b*(cos(radians(c))))**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:02:33)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = ((a**2 + b**2) - (2*a*b*radians(c)))**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
95.27
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 2))
          ^^^^^^^^^^^
TypeError: type complex doesn't define __round__ method
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
11.29
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.25
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
50.86
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 2))
          ^^^^^^^^^^^
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 17:42:20)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2  -2*a*b*(cos(radians(c))))**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:48:24)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt(a**2 + b**2 - (2*a*b*radians(cos(c))))
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
100.44
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
21.35
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
28.76
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.67
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
55.11
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
12.91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:58:40)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c)))
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
95.27
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c)))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
11.29
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.25
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
50.86
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c)))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:59:26)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2 ) - (2*a*b*radians(c))))
                                                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:45:08)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt(a**2 + b**2 - 2*a*b*radians(cos(c)))
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
100.44
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
21.35
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
28.76
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.67
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
55.11
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
12.91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:27:46)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt(a**2 + b**2 - 2*a*b*cos(c))
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
111.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
25.64
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
22.55
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.94
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
56.82
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:41:04)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2  -2*a*b*(radians(c)))**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
95.27
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 2))
          ^^^^^^^^^^^
TypeError: type complex doesn't define __round__ method
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
11.29
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.25
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
50.86
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 2))
          ^^^^^^^^^^^
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:05:54)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2  -2*a*b*(radians(c))**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    d = (a**2 + b**2  -2*a*b*(radians(c))**0.5
        ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    d = (a**2 + b**2  -2*a*b*(radians(c))**0.5
        ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    d = (a**2 + b**2  -2*a*b*(radians(c))**0.5
        ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    d = (a**2 + b**2  -2*a*b*(radians(c))**0.5
        ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    d = (a**2 + b**2  -2*a*b*(radians(c))**0.5
        ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    d = (a**2 + b**2  -2*a*b*(radians(c))**0.5
        ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:25:14)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = ((a**2 + b**2) - 2*a*b*cosc))**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    d = ((a**2 + b**2) - 2*a*b*cosc))**0.5
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    d = ((a**2 + b**2) - 2*a*b*cosc))**0.5
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    d = ((a**2 + b**2) - 2*a*b*cosc))**0.5
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    d = ((a**2 + b**2) - 2*a*b*cosc))**0.5
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    d = ((a**2 + b**2) - 2*a*b*cosc))**0.5
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    d = ((a**2 + b**2) - 2*a*b*cosc))**0.5
                                    ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:50:41)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt((a**2 + b**2) - (2*a*b*radians(c)))) 
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2) - (2*a*b*radians(c)))) 
                                                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2) - (2*a*b*radians(c)))) 
                                                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2) - (2*a*b*radians(c)))) 
                                                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2) - (2*a*b*radians(c)))) 
                                                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2) - (2*a*b*radians(c)))) 
                                                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    d = sqrt((a**2 + b**2) - (2*a*b*radians(c)))) 
                                                ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:24:42)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = ((a**2 + b**2) - 2*a*b*cosc)**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = ((a**2 + b**2) - 2*a*b*cosc)**0.5
                               ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = ((a**2 + b**2) - 2*a*b*cosc)**0.5
                               ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = ((a**2 + b**2) - 2*a*b*cosc)**0.5
                               ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = ((a**2 + b**2) - 2*a*b*cosc)**0.5
                               ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = ((a**2 + b**2) - 2*a*b*cosc)**0.5
                               ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = ((a**2 + b**2) - 2*a*b*cosc)**0.5
                               ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:01:50)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2) - (2*a*b*radians(c))
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
9077.28
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
-34.98
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
127.4
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
18.07
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
2587.06
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
-3.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:02:02)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2) - (2*a*b*radians(c))
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
9077.28
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
-34.98
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
127.4
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
18.07
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
2587.06
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
-3.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:26:28)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2 - 2*a*b*cos(c))**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
111.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
25.64
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
22.55
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.94
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
56.82
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:26:00)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2 - 2*a*b*cosc)**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = (a**2 + b**2 - 2*a*b*cosc)**0.5
                             ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = (a**2 + b**2 - 2*a*b*cosc)**0.5
                             ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = (a**2 + b**2 - 2*a*b*cosc)**0.5
                             ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = (a**2 + b**2 - 2*a*b*cosc)**0.5
                             ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = (a**2 + b**2 - 2*a*b*cosc)**0.5
                             ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = (a**2 + b**2 - 2*a*b*cosc)**0.5
                             ^^^^
NameError: name 'cosc' is not defined. Did you mean: 'cos'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:05:03)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2  -2*a*b*radians(cos(c)))**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
100.44
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
21.35
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
28.76
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.67
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
55.11
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
12.91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:14:40)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = (a**2 + b**2  -2*a*b*(radians(c)))**0.5
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
95.27
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 2))
          ^^^^^^^^^^^
TypeError: type complex doesn't define __round__ method
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
11.29
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.25
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
50.86
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(d, 2))
          ^^^^^^^^^^^
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 00:50:22)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt((a**2 + b**2) - (2*a*b*radians(cos(c)))) 
print(round(d, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
100.44
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
21.35
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
28.76
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.67
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
55.11
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
12.91
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:50:54)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt((a**2 + b**2) - (2*a*b*radians(c)))
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
95.27
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = sqrt((a**2 + b**2) - (2*a*b*radians(c)))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
11.29
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.25
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
50.86
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = sqrt((a**2 + b**2) - (2*a*b*radians(c)))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:49:56)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt((a**2 + b**2) - (2*a*b*radians(cos(c)))) 
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
100.44
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
21.35
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
28.76
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
4.67
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
55.11
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
12.91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:43:41)
-- CODE: 
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = sqrt(a**2 + b**2 - 2*a*b*cos(c))
print(round(d, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
111.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
25.64
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
22.55
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.94
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
56.82
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
